# teoria_dos_grafos

./: .gitignore  README.md  algo_busca.ipynb  amapa.csv  busca.py  dijkstra.ipynb  grafo_matriz.py  main.ipynb  pyproject.toml  search_not_smart.py  search_smart.py
output/: busca
